Revamped hero, navbar, and visual effects; fixed Tesseract placement

--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@react-three/drei": "^9.89.1",
     "@react-three/fiber": "^8.13.6",
     "@react-three/postprocessing": "^2.16.0",
+    "bootstrap": "^5.3.8",
     "framer-motion": "^10.18.0",
+    "html2canvas": "^1.4.1",
     "postprocessing": "^6.37.8",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.311",
     "three": "^0.158.0",
     "vite-plugin-glsl": "^1.5.4"
   },
